--- a/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
@@ -34,7 +34,7 @@
         <li><button type="button" class="btn-outline-warning btn" @onclick="ShowEdit">Change balance</button></li>
         <li><button type="button" class="btn-outline-warning btn" @onclick="CreateMarketTrade">Create Market Trade</button></li>
     </ul>
-    <table class="table" style="width: auto; background: lightgray">
+    <table class="table" style="width: auto">
         <thead>
         <tr>
             <th></th>
@@ -56,7 +56,9 @@
         </tr>
         </tbody>
     </table>
-
+    <br>
+    <br>
+    <br>
     <table class="table" style="width: auto">
         <thead>
         <tr>
