add exception message in change balance window in asset portfolio

--- a/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
@@ -31,7 +31,7 @@
 {
     <ul class="nav">
         <li><button type="button" class="btn-outline-secondary btn" @onclick="Refresh">Refresh</button></li>
-        <li><button type="button" class="btn-outline-warning btn" @onclick="ShowEdit">Change balance</button></li>
+        <li><button type="button" class="btn-outline-warning btn" @onclick="ShowChangeBalanceWindow">Change balance</button></li>
         <li><button type="button" class="btn-outline-warning btn" @onclick="CreateMarketTrade">Create Market Trade</button></li>
     </ul>
     <table class="table" style="width: auto">
@@ -122,7 +122,7 @@
     <div>
         <BaseTwoButtonsDialog
             Caption="Change balance"
-            OnClose="@OnCloseEditDialog"
+            OnClose="@OnCloseChangeBalanceWindow"
             YesButtonCaption="Save"
             NoButtonCaption="Cancel"
             OnSubmit="@SaveBalance">
@@ -166,6 +166,12 @@
                     <td>User</td>
                     <td><input type="text" class="form-control" @bind=User /></td>
                 </tr>
+                @if (ChangeBalanceWindowException)
+                {
+                    <tr>
+                        <td>@ChangeBalanceWindowExceptionText</td>
+                    </tr>
+                }
             </table>
         </BaseTwoButtonsDialog>
     </div>
@@ -253,6 +259,8 @@
     private string BrokerId { get; set; }
     private string WalletName { get; set; }
     private string Asset { get; set; }
+    private bool ChangeBalanceWindowException { get; set; }
+    private string ChangeBalanceWindowExceptionText { get; set; }
     
     private bool MarketTradeWindowOpen { get; set; }
     private List<string> ExchangeList { get; set; }
@@ -329,7 +337,7 @@
         return ActivePage == target ? "active" : "";
     }
     
-    private void ShowEdit()
+    private void ShowChangeBalanceWindow()
     {
         IsShowEdit = true;
         Comment = string.Empty;
@@ -337,11 +345,13 @@
         WalletName = string.Empty;
         Asset = string.Empty;
         BalanceDiff = 0;
+        ChangeBalanceWindowException = false;
+        ChangeBalanceWindowExceptionText = string.Empty;
         
         StateHasChanged();
     }
     
-    private void OnCloseEditDialog()
+    private void OnCloseChangeBalanceWindow()
     {
         IsShowEdit = false;
         Comment = string.Empty;
@@ -349,6 +359,8 @@
         WalletName = string.Empty;
         Asset = string.Empty;
         BalanceDiff = 0;
+        ChangeBalanceWindowException = false;
+        ChangeBalanceWindowExceptionText = string.Empty;
         
         StateHasChanged();
     }
@@ -386,8 +398,11 @@
                 User = User
             });
             await Refresh();
+            OnCloseChangeBalanceWindow();
         }
-        OnCloseEditDialog();
+        
+        ChangeBalanceWindowException = true;
+        ChangeBalanceWindowExceptionText = "Bad entity";
     }
 
     private void SetSettings()
