refactoring asset portfolio

--- a/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
@@ -253,7 +253,7 @@
     private AssetPortfolioPages ActivePage { get; set; }
     private List<NetBalanceByWallet> _balanceByWallets = new();
     private List<NetBalanceByAsset> _balanceByAssets = new();
-    private ILogger<AssetPortfolioComponent> _logger;
+    private ILogger<AssetPortfolioComponent> _logger = new Logger<AssetPortfolioComponent>();
     private List<string> AllAssets { get; set; }
     
     private bool IsShowEdit { get; set; }
