refactoring asset portfolio

--- a/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
@@ -295,7 +295,7 @@
         Timer.Start();
     }
 
-    private async Task DoTime(object sender, EventArgs e)
+    private async Task DoTime()
     {
         if (_timerIsActive)
         {
