--- a/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
@@ -15,6 +15,8 @@
 @inject ISpotInstrumentManager _spotInstrumentManager;
 @inject ILogger<AssetPortfolioComponent> _logger;
 
+@implements IDisposable
+
 <ul class="nav nav-tabs nav-pills">
     <li class="nav-item" style="margin: 10px">
         <button class="nav-link @CheckActive(AssetPortfolioPages.AssetPortfolio)" aria-current="page" @onclick="SetAssetPortfolio" >Asset Portfolio</button>
@@ -502,5 +504,11 @@
             AssetBalanceState.Critical => "lightcoral",
             _ => string.Empty
             };
+    }
+
+    public void Dispose()
+    {
+        Timer?.Stop();
+        Timer?.Dispose();
     }
 }
