--- a/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
@@ -39,10 +39,6 @@
         <li><button type="button" class="btn-outline-warning btn" @onclick="ShowChangeBalanceWindow">Change balance</button></li>
         <li><button type="button" class="btn-outline-warning btn" @onclick="CreateMarketTrade">Create Market Trade</button></li>
         <li><span style="margin-left: 10px; vertical-align: center">Timer</span><input type="checkbox" style="width: 40px" @bind="_timerIsActive"/></li>
-        @if (_timerIsActive)
-        {
-            <li><span style="margin-left: 10px; vertical-align: center">Refresh Time In Second</span><input type="number" style="width: 40px" @bind="_refreshTimeInSec"/></li>
-        }
     </ul>
     <table class="table" style="width: auto">
         <thead>
@@ -279,9 +275,7 @@
     private bool MarketTradeWindowException { get; set; }
     private string MarketTradeWindowExceptionText { get; set; }
     
-    private MyTaskTimer Timer { get; set; }
     private bool _timerIsActive = true;
-    private int _refreshTimeInSec = 5;
     
     protected override async Task OnInitializedAsync()
     {
@@ -293,24 +287,14 @@
 
     private void InitTimer()
     {
-        Timer = new MyTaskTimer(nameof(AssetPortfolioComponent), TimeSpan.FromSeconds(_refreshTimeInSec), _logger, DoTime);
-        Timer.Start();
+        GlobalTimers.RefreshTimer.RegisterCallback(nameof(AssetPortfolioComponent), DoTime);
     }
 
     private async Task DoTime()
     {
         if (_timerIsActive)
         {
-            if (_refreshTimeInSec < 1)
-            {
-                _refreshTimeInSec = 1;
-            }
-            await InvokeAsync(async () =>
-            {
-                await Refresh();
-                StateHasChanged();
-            });
-            Timer.ChangeInterval(TimeSpan.FromSeconds(_refreshTimeInSec));
+            await Refresh();
         }
     }
 
@@ -508,7 +492,7 @@
 
     public void Dispose()
     {
-        Timer?.Stop();
-        Timer?.Dispose();
+        _timerIsActive = false;
+        GlobalTimers.RefreshTimer.RemoveCallback(nameof(AssetPortfolioComponent));
     }
 }
