refactoring timer in asset portfolio

--- a/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
@@ -295,6 +295,7 @@
         if (_timerIsActive)
         {
             await Refresh();
+            await InvokeAsync(StateHasChanged);
         }
     }
 
