--- a/Backoffice/Components/Assets/AssetListComponent.razor
+++ b/Backoffice/Components/Assets/AssetListComponent.razor
@@ -22,6 +22,7 @@
             <th>Accuracy</th>
             <th>Deposit</th>
             <th>Withdrawal</th>
+            <th>Icon</th>
             <th>Brands</th>
             <th></th>
         </tr>
