--- a/Backoffice/Components/SpotInstruments/SpotInstrumentComponent.razor
+++ b/Backoffice/Components/SpotInstruments/SpotInstrumentComponent.razor
@@ -26,7 +26,7 @@
         <th>MO<br>Thr-ld</th>
             
         <th>Flags</th>
-            
+        <th>Icon</th>
         <th>Brands</th>
         <th></th>
     </tr>
