--- a/Backoffice/Components/SpotInstruments/SpotInstrumentDetailsDialogEdit.razor
+++ b/Backoffice/Components/SpotInstruments/SpotInstrumentDetailsDialogEdit.razor
@@ -82,6 +82,10 @@
                             <input type="checkbox" @bind="Item.Instrument.KycRequiredForTrade"/>
                         </td>
                     </tr>
+                    <tr>
+                        <td>IconUrl</td>
+                        <input type="text" class="form-control" @bind="Item.Instrument.IconUrl"/>
+                    </tr>
                 </table>
 
             </td>
