--- a/Backoffice/Components/Assets/AssetDetailsDialogEdit.razor
+++ b/Backoffice/Components/Assets/AssetDetailsDialogEdit.razor
@@ -76,6 +76,10 @@
                             <input type="checkbox" @bind="Item.Asset.KycRequiredForWithdrawal"/>
                         </td>
                     </tr>
+                    <tr>
+                        <td>IconUrl</td>
+                        <input type="text" class="form-control" @bind="Item.Asset.IconUrl"/>
+                    </tr>
                 </table>
             </td>
             
